[feat] add travisCI && change repo url.

--- a/_config.yml
+++ b/_config.yml
@@ -99,5 +99,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:tony-haibo-zhu/hexo_blog_source.git
+  repo: git@github.com:tony-haibo-zhu/tony-haibo-zhu.github.io.git
   branch: gh-pages
