--- a/_config.yml
+++ b/_config.yml
@@ -99,5 +99,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:tony-haibo-zhu/tony-haibo-zhu.github.io.git
+  repo: git@github.com:Poseiden/poseiden.top.git
   branch: master
