--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -164,7 +164,7 @@ sidebar:
 # Sidebar Avatar
 avatar:
   # Replace the default image and set the url here.
-  url: #/images/avatar.gif
+  url: https://poseiden-blog.oss-cn-beijing.aliyuncs.com/avatar.JPG
   # If true, the avatar will be dispalyed in circle.
   rounded: true
   # If true, the avatar will be rotated with the cursor.
